page jump button style fix

--- a/app/assets/stylesheets/dimensions.css.scss
+++ b/app/assets/stylesheets/dimensions.css.scss
@@ -237,3 +237,6 @@
     }
   }
 }
+.jump-page{
+  vertical-align:top;
+}
